fontawesome und logo

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <!-- saved from url=(0020)http://hn-dotnet.de/ -->
-<html class=" js flexbox flexboxlegacy canvas canvastext webgl touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>hndotnet - Home Page</title>
-    <link href="css/styles.css" rel="stylesheet">
-
-    <script id="twitter-wjs" src="hndotnet - Home Page_files/widgets.js"></script>
-    <script src="./hndotnet - Home Page_files/modernizr"></script>
-    <style type="text/css"></style>
-    <script type="text/javascript" charset="utf-8" async="" src="./hndotnet - Home Page_files/timeline.83885c9747a8d31859b5a04409e08170.js"></script></head>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        
+        <title>hndotnet - Home Page</title>
+    
+        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/font-awesome.min.css" rel="stylesheet" />
+    </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
