--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                             </tr>
                             <tr>
                                 <td>03.02.2016</td>
-                                <td>Flow Based Development / Event Based Components</td>
+                                <td><a href="/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html">
+                                Flow Based Development / Event Based Components</a></td>
                                 <td>Referent: Stefan Dirschnabel (<a href="http://codelution.de/">codelution.de</a> - <a href="https://www.xing.com/profile/Stefan_Dirschnabel"><i class="fa fa-xing"></i> Xing</a>)</td>
                                 <td>Steht noch aus</td>
                             </tr>
