--- a/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html
+++ b/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html
@@ -6,4 +6,6 @@ recipe-attribution-link: http://www.opensourcefood.com/people/HungryJenny/recipe
 ---
 
 
-Vor 5 Jahren wird in der Ausgabe 06/2011 der DotNetPro eine gewagte These propagiert: Die Objektorientierte Programmierung ist tot. Der Trend soll in Richtung funktionale Programmierung gehen. An einigen amerikanischen Universitäten wird anscheinend gar keine OOP mehr unterrichtet.
+Vor 5 Jahren wird in der Ausgabe 06/2011 der DotNetPro eine gewagte These propagiert: Die Objektorientierte Programmierung ist tot. 
+Der Trend soll in Richtung funktionale Programmierung gehen. An einigen amerikanischen Universitäten wird anscheinend gar keine OOP
+mehr unterrichtet.
