--- a/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html
+++ b/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html
@@ -9,3 +9,14 @@ recipe-attribution-link: http://www.opensourcefood.com/people/HungryJenny/recipe
 Vor 5 Jahren wird in der Ausgabe 06/2011 der DotNetPro eine gewagte These propagiert: Die Objektorientierte Programmierung ist tot. 
 Der Trend soll in Richtung funktionale Programmierung gehen. An einigen amerikanischen Universitäten wird anscheinend gar keine OOP
 mehr unterrichtet.
+
+Ein Ansatz der in diese Richtung geht (und sich seit einigen Jahren hartnäckig in der Community hält) ist der des Flow Based Development. 
+Anwendungslogik wird in wiederverwendbaren Funktionsbausteinen implementiert die nur noch über Datenobjekte kommunizieren.
+
+Topologische Abhängigkeiten zwischen Klassen werden eliminiert und nicht nur wie beim Einsatz eines DI-Containers dynamisch aufgelöst. 
+Das hat fundamentale Auswirkungen auf die Architektur eines Softwaresystems. 
+
+Ihr versteht nur Bahnhof? Dann wird es Zeit diesen neuen Ansatz der Softwareentwicklung kennen zu lernen.
+
+Nach einer Einführung in die Thematik anhand der typischen Probleme des Objekt-Orientierten-Designs geht der Vortrag auch auf 
+Realisierungsmöglichkeiten und Erfahrungen in der Praxis ein. 
