--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <div class="col-md-12 bg-lightBlue full-height header" style="height: 936px;">
                     <div class="row">
                         <div class="arrow_box col-md-offset-2 col-md-3">
-                            <h3>Nächster Termin: Live-Session WebAPI (2.0)</h3>
-                            <p>Ort: Noch unklar, Heilbronn</p>
-                            <p>Wir wollen uns Microsofts WebAPI 2.0 einmal ansehen. Dazu wollen wir unser Portal von der letzten Session weiterentwickeln und als Webapp umsetzten. Der Fokus liegt dabei auf einer einfachen REST API und einem schmalen Frontend mit jQuery und Kncokout.</p>
+                            <h3>Nächster Termin: MeetAndChill</h3>
+                            <p>Ort: Irish Pub, Lammgasse, Heilbronn</p>
+                            <p>Ein lockeres Treffen mit spontanen Diskussionen rund um .Net und den Alltag. Jeder ist eingeladen.</p>
                             <p>Anmeldungen sind zur Planung sehr willkommen. Entweder auf MeetUp oder XING</p>
-                            <p><a href="http://www.meetup.com/de/dotNet-Usergroup-Heilbronn/events/226520774/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
+                            <p><a href="http://www.meetup.com/de/dotNet-Usergroup-Heilbronn/events/227183282/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
                             <p></p>
                         </div>
                         
