--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <h3>Was ist .Net?</h3>
                     <p>
                         Der Begriff .Net Bezeichnet eine Sammlung von Frameworks von Microsoft. Seit dem Jahr 2000 wird es als Plattform für Entwickler unterschiedlicher
-                        Sprachen immer weiter ausgebaut. Mittlerweile ist die wichtigste Komponenten der .Net Core, der von Microsoft für nahezu alle Gerätetypen
-                        bereitgestellt wird. So kann mit .Net Plattformunabhängig entwickelt werden.
+                        Sprachen immer weiter ausgebaut. Mittlerweile ist die wichtigste Komponente der .Net Core, der von Microsoft für nahezu alle Gerätetypen
+                        bereitgestellt wird. So kann mit .Net plattformunabhängig entwickelt werden.
                     </p>
                     <p>
                         Neben dem Core gibt es viele weiter Module. ASP.Net ist eine Erweiterung um Web-Portale zu entwicklen, während WPF für die Entwicklung von
