--- a/index.html
+++ b/index.html
@@ -52,14 +52,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            
-                            
-                            <tr>
-                                <td>02.12.2015</td>
-                                <td>Session MVC und WebApi</td>
-                                <td>Einführung in ASP.Net MVC und WebApi - wir bauen eine kleine WebApp. Ziel der Session ist ein kleiner Chat mit WebApi-Backend.</td>
-                                <td>Steht noch aus</td>
-                            </tr>
                             <tr>
                                 <td>05.01.2016</td>
                                 <td>Meet And Chill</td>
@@ -71,7 +63,7 @@
                                 <td><a href="/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html">
                                 Flow Based Development / Event Based Components</a></td>
                                 <td>Referent: Stefan Dirschnabel (<a href="http://codelution.de/">codelution.de</a> - <a href="https://www.xing.com/profile/Stefan_Dirschnabel"><i class="fa fa-xing"></i> Xing</a>)</td>
-                                <td>Steht noch aus</td>
+                                <td>KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</td>
                             </tr>
                         </tbody>
                     </table>
