--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <p>Ein lockeres Treffen mit spontanen Diskussionen rund um .Net und den Alltag. Jeder ist eingeladen.</p>
                             <p>Anmeldungen sind zur Planung sehr willkommen. Entweder auf MeetUp oder XING</p>
                             <p><a href="http://www.meetup.com/de/dotNet-Usergroup-Heilbronn/events/227183282/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
-                            <p></p>
+                            <p><a href="https://www.xing.com/events/funktionale-software-architektur-flow-based-development-1633744"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
                         </div>
                         
                     </div>
