--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <tbody>
                             <tr>
                                 <td>05.01.2016</td>
-                                <td>Meet And Chill</td>
+                                <td><a href="http://hn-dotnet.de/events/20160105-MeetAndChill/">Meet And Chill</a></td>
                                 <td>Ein lockeres Treffen mit spontanen Diskussionen rund um .Net und den Alltag. Jeder ist eingeladen.</td>
                                 <td>Irish Pub Lammgasse</td>
                             </tr>
