--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p><a href="https://github.com/orgs/hn-dotnet"><i class="fa fa-github"></i> GitHub</a></p>
                         <p><a href="https://twitter.com/hndnug"><i class="fa fa-twitter"></i> Twitter</a></p>
                         <p><a href=""><i class="fa fa-facebook"></i> Facebook</a></p>
-                        <p><a href=""><i class="fa fa-xing"></i> XING</a></p>
+                        <p><a href="https://www.xing.com/communities/groups/dotnet-usergroup-heilbronn-e9a6-1083066"><i class="fa fa-xing"></i> XING</a></p>
                     </div>
     
                     <div class="col-md-2">
