--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="col-md-10 col-md-offset-1">
                     <br />
                     <ul class="nav nav-tabs">
-                        <li id="tabComming" class="active"><a onclick="$('#comming').show();$('#passed').hide(); $('#tabComming').toogleClass('active'); $('#tabPassed').toogleClass('active');">Nächste Veranstaltungen</a></li>
-                        <li id="tabPassed"><a onclick="$('#comming').hide();$('#passed').show(); $('#tabComming').toogleClass('active'); $('#tabPassed').toogleClass('active');">Vergangene Veranstaltungen</a></li>
+                        <li id="tabComming" class="active"><a onclick="$('#comming').show();$('#passed').hide(); $('#tabComming').toggleClass('active'); $('#tabPassed').toggleClass('active');">Nächste Veranstaltungen</a></li>
+                        <li id="tabPassed"><a onclick="$('#comming').hide();$('#passed').show(); $('#tabComming').toggleClass('active'); $('#tabPassed').toggleClass('active');">Vergangene Veranstaltungen</a></li>
                     </ul>
                     
                     <table class="table table-striped" id="comming">
