--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </table>
                     
                     
-                    <table class="table table-striped" id="passed">
+                    <table class="table table-striped" id="passed" style="display: none;">
                         <thead>
                             <tr>
                                 <td>Datum</td>
