--- a/index.html
+++ b/index.html
@@ -107,6 +107,21 @@
                     </table>
                 </div>
             </div>
+            
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <h3>Veranstaltungshinweis - Microsoft Azure Tour</h3>
+                    <p>
+                        Die Microsoft Azure Tour ist eine kostenlose eintägige Veranstaltung für IT-Professionals und Entwickler.
+                    </p>
+                    <p>
+                        <span style="font-weight: bold;">Ort: </span> Messe Frankfurt, Ludwig-Erhard-Anlage 1, 60327 Frankfurt am Main<br />
+                        <span style="font-weight: bold;">Zeit: </span> 26. 2. 2016, ab 7:30 Uhr<br />
+                        <a href="http://binged.it/1P6LPzj">Karte anzeigen</a>
+                    </p>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
                     <h3>Wer sind wir?</h3>
