--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             
-            <div class="row" style="background: #0078d7;">
+            <div class="row" style="background: #0078d7; color: #fff;">
                 <div class="col-md-5 col-md-offset-1">
                     <h3>Veranstaltungshinweis - Microsoft Azure Tour</h3>
                     <p>
