--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <p>
                         <span style="font-weight: bold;">Ort: </span> Messe Frankfurt, Ludwig-Erhard-Anlage 1, 60327 Frankfurt am Main<br />
                         <span style="font-weight: bold;">Zeit: </span> 26. 2. 2016, ab 7:30 Uhr<br />
-                        <a href="http://binged.it/1P6LPzj">Karte anzeigen</a>
+                        <a href="http://binged.it/1P6LPzj" style="color:#fff;"><i class="fa fa-map"></i> Karte anzeigen</a>
                     </p>
                 </div>
             </div>
