--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                         Die Microsoft Azure Tour ist eine kostenlose eintägige Veranstaltung für IT-Professionals und Entwickler.
                     </p>
                     <p>
+                        <a href="https://microsoft.eventcore.com/azuretour/frankfurt/auth/login#/" style="color:#fff;">Hier registrieren.</a>
+                    </p>
+                    <p>
                         <span style="font-weight: bold;">Ort: </span> Messe Frankfurt, Ludwig-Erhard-Anlage 1, 60327 Frankfurt am Main<br />
                         <span style="font-weight: bold;">Zeit: </span> 26. 2. 2016, ab 7:30 Uhr<br />
                         <a href="http://binged.it/1P6LPzj" style="color:#fff;"><i class="fa fa-map"></i> Karte anzeigen</a>
