--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         Die Microsoft Azure Tour ist eine kostenlose eintägige Veranstaltung für IT-Professionals und Entwickler.
                     </p>
                     <p>
-                        <a href="https://microsoft.eventcore.com/azuretour/frankfurt/auth/login#/" style="color:#fff;">Hier registrieren.</a>
+                        <a href="https://microsoft.eventcore.com/azuretour/frankfurt/auth/login#/" style="color:#fff;"><i class="fa fa-arrow-right"></i> Hier registrieren.</a>
                     </p>
                     <p>
                         <span style="font-weight: bold;">Ort: </span> Messe Frankfurt, Ludwig-Erhard-Anlage 1, 60327 Frankfurt am Main<br />
