--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/font-awesome.min.css" rel="stylesheet" />
     </head>
-    <body>
+    <body style="max-width: 100%;">
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
