--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             
             <footer class="bg-darkGray footer">
                 <div class="container-fluid">
-                    <div class="row">
+                    <div class="row" style="margin: 0;">
                     <div class="col-md-3 col-lg-offset-1">
                         <h4>Du findest uns auch auf:</h4>
                         <p><a href="https://github.com/orgs/hn-dotnet"><i class="fa fa-github"></i> GitHub</a></p>
@@ -217,7 +217,7 @@
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     </div>
                 </div>
-                    <div class="row" style="border-top:solid 1px #121212; background-color:#272727; padding: 15px 0px 15px 0px;">
+                    <div class="row" style="margin: 0;border-top:solid 1px #121212; background-color:#272727; padding: 15px 0px 15px 0px;">
                     <div class="col-md-10 col-md-offset-1">
                         © 2015 dotNet Usergroup Heilbronn | Design und Realisierung von Jonathan Günz
                     </div>
