--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <br />
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs" style="cursor: pointer;">
                         <li id="tabComming" class="active"><a onclick="$('#comming').show();$('#passed').hide(); $('#tabComming').toggleClass('active'); $('#tabPassed').toggleClass('active');">Nächste Veranstaltungen</a></li>
                         <li id="tabPassed"><a onclick="$('#comming').hide();$('#passed').show(); $('#tabComming').toggleClass('active'); $('#tabPassed').toggleClass('active');">Vergangene Veranstaltungen</a></li>
                     </ul>
