--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             
-            <div class="row" style="background: #0078d7; color: #fff;">
+            <div class="row" style="background: #0078d7; color: #0072c6;">
                 <div class="col-md-5 col-md-offset-1">
                     <h3>Veranstaltungshinweis - Microsoft Azure Tour</h3>
                     <p>
@@ -122,6 +122,9 @@
                         <span style="font-weight: bold;">Zeit: </span> 26. 2. 2016, ab 7:30 Uhr<br />
                         <a href="http://binged.it/1P6LPzj" style="color:#fff;"><i class="fa fa-map"></i> Karte anzeigen</a>
                     </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://raw.githubusercontent.com/hn-dotnet/hn-dotnet.github.io/master/events/20160226-Azuretour/azuretour.png" />
                 </div>
             </div>
             
