--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             
-            <div class="row" style="background: #0072c6; color: #fff;">
+            <div class="row" style="background: #0072c6; color: #fff; padding-top: 15px; padding-bottom: 15px;">
                 <div class="col-md-5 col-md-offset-1">
                     <h3>Veranstaltungshinweis - Microsoft Azure Tour</h3>
                     <p>
