--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>03.02.2016</td>
-                                <td><a href="/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html">
-                                Flow Based Development / Event Based Components</a></td>
-                                <td>Referent: Stefan Dirschnabel (<a href="http://codelution.de/">codelution.de</a> - <a href="https://www.xing.com/profile/Stefan_Dirschnabel"><i class="fa fa-xing"></i> Xing</a>)</td>
-                                <td>KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</td>
-                            </tr>
-                            <tr>
                                 <td>01.03.2016</td>
                                 <td><a href="http://hn-dotnet.de/events/20150301-MeetAndChill/">MeetAndChill Gadgetabend </a></td>
                                 <td>Cooles neues Gadget? Dann zeig her! In gemühtlicher Atmosphäre mal das Spielzeug vergleichen.</td>
                                 <td>Irish Pub Lammgasse</td>
+                            </tr>
+                            <tr>
+                                <td>06.04.2016</td>
+                                <td><a href="/events/160406-call-for-paper/">
+                                Call for papers</a></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
@@ -91,6 +91,13 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td>03.02.2016</td>
+                                <td><a href="/events/160203-stefan-dirschnabe-Flow-Based-Development-Event-Based-Componentsl.html">
+                                Flow Based Development / Event Based Components</a></td>
+                                <td>Referent: Stefan Dirschnabel (<a href="http://codelution.de/">codelution.de</a> - <a href="https://www.xing.com/profile/Stefan_Dirschnabel"><i class="fa fa-xing"></i> Xing</a>)</td>
+                                <td>KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</td>
+                            </tr>
                             <tr>
                                 <td>05.01.2016</td>
                                 <td><a href="http://hn-dotnet.de/events/20160105-MeetAndChill/">Meet And Chill</a></td>
