--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <div class="col-md-12 bg-lightBlue full-height header" style="height: 936px;">
                     <div class="row">
                         <div class="arrow_box col-md-offset-2 col-md-3">
-                            <h3>Nächster Termin: Flow Based Development / Event Based Components</h3>
-                            <p>Ort: KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</p>
-                            <p>Vor 5 Jahren wird in der Ausgabe 06/2011 der DotNetPro eine gewagte These propagiert: Die Objektorientierte Programmierung ist tot.</p>
+                            <h3>Nächster Termin: MeetAndChill Gadgetabend</h3>
+                            <p>Ort: Irish Pub, Lammgasse 20, 74072 Heilbronn</p>
+                            <p>Gemütliches diskutieren über alles rund um .Net und Softwareentwicklung. Thema das Abends sind vor allem Devices und Gadgets.</p>
                             <p>Anmeldungen sind zur Planung sehr willkommen. Entweder auf MeetUp oder XING</p>
-                            <p><a href="http://www.meetup.com/de/dotNet-Usergroup-Heilbronn/events/227539456/?eventId=227539456"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
-                            <p><a href="https://www.xing.com/events/funktionale-software-architektur-flow-based-development-1633744"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
+                            <p><a href="http://www.meetup.com/de-DE/dotNet-Usergroup-Heilbronn/events/227910191/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
+                            <p><a href="#"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
                         </div>
                         
                         
