--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
                         <tbody>
                             <tr>
                                 <td>06.04.2016</td>
-                                <td><a href="/events/160406-call-for-paper/">
-                                Call for papers</a></td>
-                                <td></td>
-                                <td></td>
+                                <td><a href="/events/160413/">Tool-Porn</a></td>
+                                <td>Hast auch du ein Lieblingstool für deine tägliche Arbeit als Entwickler? Zeig es uns.</td>
+                                <td>KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</td>
                             </tr>
                         </tbody>
                     </table>
