--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
                 <div class="col-md-12 bg-lightBlue full-height header" style="height: 936px;">
                     <div class="row">
                         <div class="arrow_box col-md-offset-2 col-md-3">
-                            <h3>Nächster Termin: MeetAndChill Gadgetabend</h3>
-                            <p>Ort: Irish Pub, Lammgasse 20, 74072 Heilbronn</p>
-                            <p>Gemütliches diskutieren über alles rund um .Net und Softwareentwicklung. Thema das Abends sind vor allem Devices und Gadgets.</p>
-                            <p>Anmeldungen sind zur Planung sehr willkommen. Entweder auf MeetUp oder XING</p>
-                            <p><a href="http://www.meetup.com/de-DE/dotNet-Usergroup-Heilbronn/events/227910191/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
+                            <h3>Nächster Termin: Toolporn</h3>
+                            <p>Ort: KIS - Kaufland Informationssysteme GmbH & Co. KG, Haller Str. 60, 74189 Weinsberg</p>
+                            <p>
+                                Dieses Mal sollen alle in Aktion treten, die sich berufen fühlen. Jeder hat dieses eine Tool was er über alle Maßen liebt. 
+                                Oder man hat vor einer Weile ein Framework gefunden und hyped das jetzt ganz massiv. Wie wäre es, dass mal allen zu zeigen.
+                            </p>
+                            <p><a href="http://www.meetup.com/de-DE/dotNet-Usergroup-Heilbronn/events/229341590/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
                             <p><a href="#"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
                         </div>
                         
