--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 Oder man hat vor einer Weile ein Framework gefunden und hyped das jetzt ganz massiv. Wie wäre es, dass mal allen zu zeigen.
                             </p>
                             <p><a href="http://www.meetup.com/de-DE/dotNet-Usergroup-Heilbronn/events/229341590/"> <i class="fa fa-calendar"></i> Anmeldung bei MeetUp</a></p>
-                            <p><a href="#"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
+                            <p><a href="https://www.xing.com/events/toolporn-1664698"> <i class="fa fa-xing"></i> Anmeldung bei Xing</a></p>
                         </div>
                         
                         
