--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                 </p>
             </div>
             <div class="col-md-4 col-md-offset-1">
+                <a href="http://hn-dotnet.de/blog/20160518-dotnet-wird-developer/">
+                    <div>
+                        <h3>Blogbeitrag: #devHN</h3> .Net Usergroup Heilbronn goes connect.IT Developer
+                    </div>
+                </a>
+                
                 <a href="http://hn-dotnet.de/blog/20160413-toolporn/">
                     <div>
                         <h3>Blogbeitrag: Toolporn - Liste der Tools</h3> Hier findet ihr einen kleinen Bericht und die Liste der vorgestellten Tool.
